<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/gray_dark">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/chiguilogo"
        />

    <TextView
        android:id="@+id/txtInvitation"
        style="@style/viewCustom"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/invitation"
        android:textColor="@color/orange"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="30dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <EditText
        android:id="@+id/etVerifyPassword"
        style="@style/viewCustom"
        android:hint="@string/verifyPassword"
        android:inputType="textPassword"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvLogin"
        style="@style/viewCustom"
        android:background="@color/green"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:textAlignment="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="login"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:gravity="center_horizontal"
        android:onClick="forgotPassWord"
        android:paddingTop="0dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/gray" />

    <LinearLayout
        android:id="@+id/lyTerms"
        style="@style/viewCustom"
        android:orientation="horizontal"
        android:background="@color/gray_dark">
        <CheckBox
            android:id="@+id/cbAcept"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="10sp"
            android:text="@string/acept"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="10sp"
            android:textColor="@color/salmon"
            android:layout_marginLeft="5dp"
            android:onClick="goTerms"/>

    </LinearLayout>

    <Button
        android:id="@+id/btSignGoogle"
        style="@style/viewCustom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingLeft="30dp"
        android:onClick="callSignInGoogle"/>

    <!-- para facebook <Button
        android:id="@+id/btSignFacebook"
        style="@style/viewCustom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/facebook"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingLeft="30dp"/> -->



    </LinearLayout>

</ScrollView>